# WorldEconomy

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
report/: 00-pipeline.md  00-the-lab.md  01-long-arc.md  02-nations.md  03-money-markets.md  04-debt-ledger.md  04-structural-forces.md  04-wealth-people.md  05-debt-ledger.md  05-structural-forces.md  05-wealth-people.md  06-balance-sheets-of-power.md  06-synthesis.md  06-wealth-people.md  07-balance-sheets-of-power.md  07-who-owns-the-land.md  08-cost-of-living.md  08-debt-ledger.md  08-structural-forces.md  09-balance-sheets-of-power.md  09-cost-of-living.md  09-dynasties.md  09-who-owns-the-land.md  10-chokepoints.md  10-dynasties.md  10-synthesis.md  11-dynasties.md  11-levers-of-the-world.md  11-synthesis.md  12-dynasties.md  12-synthesis.md  13-synthesis.md  BACKLOG.md
src/econlab/: __init__.py  catalog.py  cli.py  config.py  entities.py  fetch.py  mcp_server.py  model.py  notes_store.py  refresh.py  report_build.py  viz.py
src/econlab/analysis/: ch01_longarc.py  ch02_nations.py  ch03_money.py  ch04_debt.py  ch04_structure.py  ch04_wealth.py  ch05_debt.py  ch05_structure.py  ch05_wealth.py  ch06_power.py  ch06_synthesis.py  ch06_wealth.py  ch07_land.py  ch07_power.py  ch08_cost.py  ch08_debt.py  ch08_structure.py  ch09_cost.py  ch09_dynasties.py  events.py  (+15 more)
tests/: test_sanity.py
webreader/: .gitignore  README.md  firebase.json  firestore.rules  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webreader/scripts/: sync-report.mjs
webreader/src/: App.vue  style.css
(+70 files in other folders)
