[project]
name = "econlab"
version = "0.1.0"
description = "World Economy Lab - data warehouse, analysis library, and MCP apparatus for understanding the world economy from primary data"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=17",
    "requests>=2.32",
    "matplotlib>=3.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "typer>=0.12",
]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
econ = "econlab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
